Notebook error handler auto-registration
When bundle is loaded into Pyfony

--- a/src/databricksbundle/_config/config.yaml
+++ b/src/databricksbundle/_config/config.yaml
@@ -1,3 +1,7 @@
+parameters:
+  databricksbundle:
+    enableNotebookErrorHandler: True
+
 services:
   databricksbundle.dbutils.DatabricksConnectDbUtilsFactory:
 
