orgId should be None by default
As AWS Databricks does not require this ID to be set

Tests extended to cover both AWS & Azure

--- a/src/databricksbundle/spark/spark_autodetect.yaml
+++ b/src/databricksbundle/spark/spark_autodetect.yaml
@@ -3,6 +3,7 @@ parameters:
 
     databricksConnect:
       connection:
+        orgId:
         port: 8787
         driverBindAddress: 127.0.0.1
       spark:
