--- a/src/databricksbundle/_config/config_test_aws.yaml
+++ b/src/databricksbundle/_config/config_test_aws.yaml
@@ -5,7 +5,6 @@ parameters:
   databricksbundle:
     databricksConnect:
       connection:
-        address: 'https://westeurope.azuredatabricks.net'
+        address: 'https://dbc-123.cloud.databricks.com'
         token: ''
         clusterId: ''
-        orgId: ''
