--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,10 +27,11 @@ packages = [
 python = "~3.7.3"
 pyfony-bundles = "0.2.*"
 ipython = "7.*"
+injecta = "0.7.*"
 
 [tool.poetry.dev-dependencies]
 databricks-connect = "6.2.*"
 pylint = "2.4.*"
 pytest = "5.2.*"
 py4j = "^0.10.9"
-pyfony = "^0.4.0"
+pyfony = "^0.4.3"
