--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,8 +30,9 @@ ipython = "7.*"
 injecta = "0.7.*"
 
 [tool.poetry.dev-dependencies]
-databricks-connect = "6.2.*"
+databricks-connect = "6.2.* || 6.4.*"
 pylint = "2.4.*"
 pytest = "5.2.*"
 py4j = "^0.10.9"
 pyfony = "^0.4.3"
+pandas = "0.24.*"
