display() requires pandas & pyarrow to work with DBX connect

--- a/src/databricksbundle/spark/spark_autodetect.yaml
+++ b/src/databricksbundle/spark/spark_autodetect.yaml
@@ -9,6 +9,7 @@ parameters:
       spark:
         extraConfig:
           spark.sql.session.timeZone: 'Etc/UTC'
+          spark.sql.execution.arrow.fallback.enabled: 'true'
 
     databricks:
       spark:
