--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ python = "~3.7.3"
 pyfony-bundles = "0.2.*"
 ipython = "7.*"
 injecta = "0.7.*"
+pandas = "^0.24.2"
+pyarrow = "^0.16.0"
 
 [tool.poetry.dev-dependencies]
 databricks-connect = "6.2.* || 6.4.*"
@@ -35,4 +37,3 @@ pylint = "2.4.*"
 pytest = "5.2.*"
 py4j = "^0.10.9"
 pyfony = "^0.4.3"
-pandas = "0.24.*"
