Pipeline arguments autowiring

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ packages = [
 python = "~3.7.3"
 pyfony-bundles = "0.2.*"
 ipython = "7.*"
-injecta = "0.7.* || 0.8.*"
+injecta = "^0.8.4"
 pandas = "^0.24.2"
 pyarrow = "^0.16.0"
 
@@ -36,4 +36,4 @@ databricks-connect = "6.2.* || 6.4.*"
 pylint = "2.4.*"
 pytest = "5.2.*"
 py4j = "^0.10.9"
-pyfony = "^0.4.3"
+pyfony = "0.5.*"
