--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "databricks-bundle"
-version = "0.4.0b2"
+version = "0.4.0"
 description = "Databricks bundle for the Pyfony framework"
 readme = "README.md"
 repository = "https://github.com/bricksflow/databricks-bundle"
