DbUtils auto-resolving fixed
The same way as the SparkSession auto-resolving, see:
https://github.com/bricksflow/databricks-bundle/commit/ba2bea3493688abd8ce3f7224aa8a4a21ea35005

--- a/src/databricksbundle/_config/databricks.yaml
+++ b/src/databricksbundle/_config/databricks.yaml
@@ -5,6 +5,11 @@ parameters:
         extraConfig:
 
 services:
+  databricksbundle.dbutils.DatabricksDbUtilsFactory:
+
+  databricksbundle.dbutils.DbUtilsWrapper:
+    factory: ['@databricksbundle.dbutils.DatabricksDbUtilsFactory', 'create']
+
   databricksbundle.spark.config.databricksExtraConfig:
     class: databricksbundle.spark.config.DictConfigConfigurator
     arguments:
