Load Databricks token from the DBX_TOKEN env var by default
To simplify initial setup

--- a/src/databricksbundle/_config/databricks_connect.yaml
+++ b/src/databricksbundle/_config/databricks_connect.yaml
@@ -3,6 +3,7 @@ parameters:
     databricksConnect:
       connection:
         orgId:
+        token: '%env(DBX_TOKEN)%'
         port: 15001
         driverBindAddress: 127.0.0.1
       spark:
