--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ python = "~3.7.3"
 pyfony-bundles = "0.2.*"
 ipython = "7.*"
 injecta = "^0.8.4"
-pandas = "^0.24.2"
+pandas = ">=0.24.2"
 pyarrow = "^0.16.0"
 
 [tool.poetry.dev-dependencies]
