--- a/src/databricksbundle/_config/spark_test.yaml
+++ b/src/databricksbundle/_config/spark_test.yaml
@@ -1,5 +1,7 @@
 services:
-  databricksbundle.spark.BasicSessionFactory:
+  databricksbundle.spark.ScriptSessionFactory:
+    arguments:
+      - []
 
   pyspark.sql.session.SparkSession:
-    factory: ['@databricksbundle.spark.BasicSessionFactory', 'create']
+    factory: ['@databricksbundle.spark.ScriptSessionFactory', 'create']
