Parameters can be passed directly to pipelines
@pipelineFunction('%kernel.environment%')
def test_function(appEnv: str, tableNames: TableNames):
    print(appEnv)
    print(tableNames.getByAlias('db_name.tbl_test'))

--- a/src/databricksbundle/_config/config.yaml
+++ b/src/databricksbundle/_config/config.yaml
@@ -6,8 +6,8 @@ parameters:
       serviceResolvers:
 
 services:
-  databricksbundle.pipeline.function.ServiceResolver:
+  databricksbundle.pipeline.function.ArgumentResolver:
     arguments:
       - '%databricksbundle.pipeline.serviceResolvers%'
 
-  databricksbundle.pipeline.function.ServicesResolver:
+  databricksbundle.pipeline.function.ArgumentsResolver:
