DbUtils added to spark_test.yaml

--- a/src/databricksbundle/_config/spark_test.yaml
+++ b/src/databricksbundle/_config/spark_test.yaml
@@ -1,4 +1,9 @@
 services:
+  databricksbundle.dbutils.DatabricksConnectDbUtilsFactory:
+
+  databricksbundle.dbutils.DbUtilsWrapper:
+    factory: ['@databricksbundle.dbutils.DatabricksConnectDbUtilsFactory', 'create']
+
   databricksbundle.spark.ScriptSessionFactory:
     arguments:
       - []
