Notebook path resolving separated into service

--- a/src/databricksbundle/_config/config.yaml
+++ b/src/databricksbundle/_config/config.yaml
@@ -17,3 +17,5 @@ services:
   databricksbundle.notebook.function.service.LoggerResolver:
 
   databricksbundle.notebook.function.service.NotebookParamsResolver:
+
+  databricksbundle.notebook.NotebookPathResolver:
