--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,9 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: '8.0.x'
-      - uses: goanpeca/setup-miniconda@v1.1.4
+      - uses: conda-incubator/setup-miniconda@v2.0.0
         with:
-          miniconda-version: '4.7.12'
+          miniconda-version: 'py38_4.8.3'
       - name: setup
         run: |
           ./env-init.sh
