--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,8 @@ jobs:
           miniconda-version: 'py38_4.8.3'
       - name: setup
         run: |
+          export SHELL=$SHELL # for python to be able to access the bash version
           ./env-init.sh -y --verbose
-          eval "$(conda shell.bash hook)"
-          source $HOME/.poetry/env
-          conda activate $PWD/.venv
       - name: pylint
         run: |
           eval "$(conda shell.bash hook)"
