--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,8 +30,7 @@ injecta = "^0.8.9"
 logger-bundle = "0.5.*"
 
 [tool.poetry.dev-dependencies]
-databricks-connect = "6.2.* || 6.4.*"
+databricks-connect = "^7.3"
 pylint = "2.4.*"
 pytest = "5.2.*"
-py4j = "^0.10.9"
 pyfony = "0.5.*"
