--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,12 +25,21 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "~3.7.3"
-pyfony-bundles = "0.2.*"
-injecta = "^0.8.9"
-logger-bundle = "0.5.*"
+pyfony-core = "^0.7.0"
+pyfony-bundles = "^0.3.0"
+injecta = "^0.9.0"
+logger-bundle = "^0.6.0"
+console-bundle = "^0.3.0"
 
 [tool.poetry.dev-dependencies]
 databricks-connect = "^7.3"
 pylint = "2.4.*"
 pytest = "5.2.*"
-pyfony = "0.5.*"
+
+[tool.poetry.plugins."pyfony.bundle"]
+create = "databricksbundle.DatabricksBundle:DatabricksBundle.autodetect"
+
+[pyfony.bootstrap]
+containerInit = "pyfonycore.container.containerInit:initWithCurrentBundle"
+rootModuleName = "databricksbundle"
+allowedEnvironments = ["test_aws", "test_azure"]
