--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,17 +24,17 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "~3.7.3"
-pyfony-core = "^0.7.0"
-pyfony-bundles = "^0.3.0"
-injecta = "^0.9.0"
-logger-bundle = "^0.6.0"
-console-bundle = "^0.3.0"
+python = "^3.7"
+pyfony-core = "^0.7.1"
+pyfony-bundles = "^0.3.2"
+injecta = "^0.9.1"
+logger-bundle = "^0.6.1"
+console-bundle = "^0.3.1"
 
 [tool.poetry.dev-dependencies]
-databricks-connect = "^7.3"
-pylint = "2.4.*"
-pytest = "5.2.*"
+databricks-connect = ">=7.3.7,<8.0.0"
+pylint = "^2.4"
+pytest = "^5.2"
 
 [tool.poetry.plugins."pyfony.bundle"]
 create = "databricksbundle.DatabricksBundle:DatabricksBundle.autodetect"
