databricks-connect test command added (dbx:test-connection)

--- a/src/databricksbundle/_config/config.yaml
+++ b/src/databricksbundle/_config/config.yaml
@@ -12,3 +12,10 @@ services:
   databricksbundle.notebook.logger.NotebookLoggerFactory:
     arguments:
       - '@databricksbundle.notebook.pathResolver'
+
+  databricksbundle.test.DatabricksConnectTestCommand:
+    arguments:
+      - '@consolebundle.logger'
+    tags:
+      - 'console.command'
+
