--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
 name = "databricks-bundle"
 version = "0.7.2"
-description = "Databricks bundle for the Bricksflow framework"
+description = "Databricks bundle for the Daipe framework"
 readme = "README.md"
-repository = "https://github.com/bricksflow/databricks-bundle"
+repository = "https://github.com/daipe-ai/databricks-bundle"
 
 license = "MIT"
 
@@ -25,21 +25,33 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.7"
-pyfony-core = "^0.7.1"
-pyfony-bundles = "^0.3.2"
-injecta = "^0.9.1"
-logger-bundle = "^0.6.1"
-console-bundle = "^0.3.1"
+console-bundle = "0.4.*"
+pyfony-core = "0.8.*"
+pyfony-bundles = "0.4.*"
+injecta = "0.10.*"
+logger-bundle = "0.7.*"
 
 [tool.poetry.dev-dependencies]
 databricks-connect = ">=7.3.7,<8.0.0"
-pylint = "^2.4"
 pytest = "^5.2"
+flake8 = "^3.9.0"
+black = "^20.8b1"
+flake8-fixme = "^1.1.1"
+pep8-naming = "^0.11.1"
+poethepoet = "^0.10.0"
 
 [tool.poetry.plugins."pyfony.bundle"]
 create = "databricksbundle.DatabricksBundle:DatabricksBundle.autodetect"
 
 [pyfony.bootstrap]
-containerInit = "pyfonycore.container.containerInit:initWithCurrentBundle"
-rootModuleName = "databricksbundle"
-allowedEnvironments = ["test_aws", "test_azure"]
+container_init = "pyfonycore.container.container_init:init_with_current_bundle"
+root_module_name = "databricksbundle"
+allowed_environments = ["test_aws", "test_azure"]
+
+[tool.black]
+line-length = 140
+
+[tool.poe.tasks]
+black = "black src"
+black-check = "black --check src"
+flake8 = "flake8 --ignore=E501,W503 src"
