--- a/src/databricksbundle/_config/config_test_azure.yaml
+++ b/src/databricksbundle/_config/config_test_azure.yaml
@@ -1,8 +1,8 @@
 parameters:
   databricksbundle:
-    databricksConnect:
+    databricks_connect:
       connection:
         address: 'https://westeurope.azuredatabricks.net'
         token: 'abcd123456'
-        clusterId: '0416-084917-doles835'
-        orgId: 123456789
+        cluster_id: '0416-084917-doles835'
+        org_id: 123456789
