--- a/src/databricksbundle/_config/databricks/databricks_connect.yaml
+++ b/src/databricksbundle/_config/databricks/databricks_connect.yaml
@@ -1,38 +1,38 @@
 parameters:
   databricksbundle:
-    databricksConnect:
+    databricks_connect:
       connection:
-        orgId:
+        org_id:
         token: '%env(DBX_TOKEN)%'
         port: 15001
-        driverBindAddress: 127.0.0.1
+        driver_bind_address: 127.0.0.1
       spark:
-        extraConfig:
+        extra_config:
           spark.sql.session.timeZone: 'Etc/UTC'
           spark.sql.execution.arrow.fallback.enabled: 'true'
 
 services:
   databricksbundle.dbutils.DatabricksConnectDbUtilsFactory:
 
-  databricksbundle.notebook.pathResolver:
+  databricksbundle.notebook.path_resolver:
     class: databricksbundle.notebook.path.LocalScriptPathResolver
 
-  databricksbundle.spark.config.databricksConnectExtraConfig:
+  databricksbundle.spark.config.databricks_connect_extra_config:
     class: databricksbundle.spark.config.DictConfigConfigurator
     arguments:
-      - '%databricksbundle.databricksConnect.spark.extraConfig%'
+      - '%databricksbundle.databricks_connect.spark.extra_config%'
     tags:
-      - databricksConnect.configurator
+      - databricks_connect.configurator
 
   databricksbundle.spark.DatabricksConnectSessionFactory:
     arguments:
-      - '%databricksbundle.databricksConnect.connection.address%'
-      - '%databricksbundle.databricksConnect.connection.token%'
-      - '%databricksbundle.databricksConnect.connection.clusterId%'
-      - '%databricksbundle.databricksConnect.connection.orgId%'
-      - '%databricksbundle.databricksConnect.connection.port%'
-      - '%databricksbundle.databricksConnect.connection.driverBindAddress%'
-      - !tagged databricksConnect.configurator
+      - '%databricksbundle.databricks_connect.connection.address%'
+      - '%databricksbundle.databricks_connect.connection.token%'
+      - '%databricksbundle.databricks_connect.connection.cluster_id%'
+      - '%databricksbundle.databricks_connect.connection.org_id%'
+      - '%databricksbundle.databricks_connect.connection.port%'
+      - '%databricksbundle.databricks_connect.connection.driver_bind_address%'
+      - !tagged databricks_connect.configurator
 
   pyspark.dbutils.DBUtils:
     factory: ['@databricksbundle.dbutils.DatabricksConnectDbUtilsFactory', 'create']
