Code moved to daipe-core & pyspark-bundle
To make Daipe spark-agnostic (not dependent on Databricks)

Associated with decorators refactoring:

Notebook functions can have up to 2 decorators:

1. Input decorator (@transformation, @notebook_function, ...) - handles input parameters
2. (optional) Output decorator (@table_append, @table_overwrite, @feature_writer, ...) - handles decorated function output

New decorators can also be called with special data loading functions (like read_csv, read_table, ...)

--- a/src/databricksbundle/_config/config.yaml
+++ b/src/databricksbundle/_config/config.yaml
@@ -3,15 +3,11 @@ parameters:
     enable_notebook_error_handler: True
 
 services:
-  databricksbundle.notebook.function.ArgumentResolver:
-    arguments:
-      - '@databricksbundle.logger'
-
-  databricksbundle.notebook.function.ArgumentsResolver:
-
   databricksbundle.notebook.logger.NotebookLoggerFactory:
     arguments:
       - '@databricksbundle.notebook.path_resolver'
+    tags:
+      - {name: 'daipe.logger.factory', alias: 'databricks'}
 
   databricksbundle.test.DatabricksConnectTestCommand:
     arguments:
@@ -19,3 +15,10 @@ services:
     tags:
       - 'console.command'
 
+  databricksbundle.notebook.DataFrameDisplay:
+    tags:
+      - {name: 'pysparkbundle.dataframe.show_method', alias: "databricks_display"}
+
+  databricksbundle.filesystem.DbUtilsFilesystem:
+    tags:
+      - {name: 'pysparkbundle.filesystem', alias: 'dbutils.fs'}
