Support for cross-platform widgets definition
DatabricksWidgets is a replacement for Databricks-specific dbutils.widgets

--- a/src/databricksbundle/_config/config.yaml
+++ b/src/databricksbundle/_config/config.yaml
@@ -22,3 +22,7 @@ services:
   databricksbundle.filesystem.DbUtilsFilesystem:
     tags:
       - {name: 'pysparkbundle.filesystem', alias: 'dbutils.fs'}
+
+  databricksbundle.widgets.DatabricksWidgets:
+    tags:
+      - "widgets.factory"
