--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,7 @@
 name: databricks-bundle
 channels:
-  - defaults
+  - conda-forge
 dependencies:
   - python=3.7.3
-  - pip
+  - pip=21.2.*
+  - setuptools=<58
