--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "databricks-bundle"
-version = "1.2.0b1"
+version = "1.2.0"
 description = "Databricks runtime support for the Daipe framework"
 readme = "README.md"
 repository = "https://github.com/daipe-ai/databricks-bundle"
