--- a/src/databricksbundle/_config/databricks/databricks_script.yaml
+++ b/src/databricksbundle/_config/databricks/databricks_script.yaml
@@ -3,12 +3,15 @@ parameters:
     databricks:
       spark:
         extra_config:
+    notebook:
+      path_resolver: "databricks_script"
 
 services:
   databricksbundle.dbutils.DatabricksDbUtilsFactory:
 
-  databricksbundle.notebook.path_resolver:
-    class: databricksbundle.notebook.path.DatabricksScriptPathResolver
+  databricksbundle.notebook.path.DatabricksScriptPathResolver:
+    tags:
+      - { name: databricksbundle.notebook.path_resolver, alias: databricks_script }
 
   databricksbundle.spark.config.databricks_extra_config:
     class: databricksbundle.spark.config.DictConfigConfigurator
