--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ daipe-core = "^1.2"
 [tool.poetry.dev-dependencies]
 databricks-connect = { url = "https://daipe-packages.s3.eu-central-1.amazonaws.com/databricks-connect-9.1.2.tar.gz" }
 pytest = "^5.2"
+pyre-check-nightly = { version = "^0.0.101638533492", markers = "sys_platform == 'linux'"}
 ipython = "^7.30.1"
 pylint = "^2.12.2"
 black = "^20.8b1"
