--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,10 +35,10 @@ daipe-core = "^1.2"
 
 [tool.poetry.dev-dependencies]
 databricks-connect = {url = "https://daipe-packages.s3.eu-central-1.amazonaws.com/databricks-connect-9.1.2.tar.gz"}
-pyre-check-nightly = { version = "^0.0.101638533492", markers = "sys_platform == 'linux'"}
+pyre-check = "^0.9.10"
 ipython = "^7.30.1"
 pylint = "^2.12.2"
-black = "^20.8b1"
+black = "^22.0.0"
 poethepoet = "^0.10.0"
 
 [tool.poetry.plugins."pyfony.bundle"]
