--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
         uses: conda-incubator/setup-miniconda@v2.1.1
         with:
           miniforge-version: 4.10.3-6
+          auto-activate-base: true
+          activate-environment: ""
       - name: python version 2
         run: |
           python --version
