--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,23 +10,19 @@ jobs:
         shell: bash -el {0}
     steps:
       - uses: actions/checkout@v1
-      - name: python version
-        run: |
-          python --version
-          which python
       - name: Install Miniforge
         uses: conda-incubator/setup-miniconda@v2.1.1
         with:
           miniforge-version: 4.10.3-6
           auto-activate-base: true
           activate-environment: ""
-      - name: python version 2
+      - name: Install Poetry
+        uses: snok/install-poetry@v1.3.3
+        with:
+          version: 1.1.8
+      - name: Build package
         run: |
-          python --version
-          which python
-      - name: python version 3
-        run: |
-          export "PATH=/usr/share/miniconda3/bin:$PATH"
-          ls -l /usr/share/miniconda3/bin
-          python --version
-          which python
+          conda env create -f environment.yml -p .venv
+          eval "$(conda shell.bash hook)"
+          conda activate $PWD/.venv
+          poetry build -f wheel
