--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,9 @@ jobs:
           miniforge-version: 4.10.3-6
           auto-activate-base: true
           activate-environment: ""
+      - name: Add conda python do PATH
+        run: |
+          echo "/usr/share/miniconda3/bin" >> $GITHUB_PATH
       - name: Install Poetry
         uses: snok/install-poetry@v1.3.3
         with:
