--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "databricks-bundle"
 version = "1.5.0"
-description = "Databricks runtime support for the Daipe framework"
+description = "[DEPRECATED] Databricks runtime support for the Daipe framework"
 readme = "README.md"
 repository = "https://github.com/daipe-ai/databricks-bundle"
 
@@ -15,6 +15,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
+    "Development Status :: 7 - Inactive",
 ]
 
 include = ["*.yaml"]
