--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,6 @@ jobs:
 
   release:
     needs: build
-    uses: pyfony/pyfony-package-ci-cd/.github/workflows/release.yml@v1
+    uses: pyfony/pyfony-package-ci-cd/.github/workflows/release.yml@master
     secrets:
       PYPI_PUBLISH: ${{ secrets.PYPI_PUBLISH }}
